fix minor code-smell to use primitive boolean